# gemmir

./: .gitignore  CMakeLists.txt
dialect/gemm/: CMakeLists.txt  GemmDialect.cpp  GemmOpConstant.cpp  GemmOps.cpp  GemmTypes.cpp
include/: CMakeLists.txt
include/dialect/gemm/: CMakeLists.txt  Gemm.td  dialect.h
include/gemmir/: CMakeLists.txt  common.h  config.h.in  gemmlib.h  lexer.h
lib/: CMakeLists.txt  lib.cpp
main/: CMakeLists.txt  main.cpp
